--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -47,27 +47,27 @@
         <p>Please fill out this to register</p>
         <form th:action="@{/register}"
               th:object="${user}"
+
+
               method="post">
             <div class="form-group">
-                <label for="firstName">First Name</label>
-                <input th:field="*{firstName}
-"type="text" name="firstName" id="firstName" required placeholder="Your Firstname" class="form-control form-control-lg">
+                <label >First Name</label>
+                <input th:field="*{firstName}"  type="text" required placeholder="Your Firstname" class="form-control form-control-lg">
             </div>
             <div class="form-group">
-                <label for="lastName">Last Name</label>
-                <input th:field="*{lastName}" type="text" name="lastName" id="lastName" required placeholder="Your Lastname" class="form-control form-control-lg">
+                <label >Last Name</label>
+                <input  type="text" th:field="*{lastName}" required placeholder="Your Lastname" class="form-control form-control-lg">
             </div>
             <div class="form-group">
-                <label for="email">Email address</label>
-                <input th:field="*{email}" type="email" class="form-control form-control-lg" required minlength="6" placeholder="Email" name="email" id="email"
+                <label >Email address</label>
+                <input  type="email" class="form-control form-control-lg" required minlength="6" placeholder="Email" th:field="*{email}"
                        aria-describedby="emailHelp">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with
                     anyone else.</small>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
-                <input th:field="*{password}" type="password" class="form-control form-control-lg" required placeholder="Password" name="password"
-                       id="password">
+                <label >Password</label>
+                <input  type="password" class="form-control form-control-lg" required placeholder="Password" th:field="*{password}">
             </div>
 
             <input type="submit" value="Register" class="btn btn-primary btn-block">
