--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -34,10 +34,10 @@
                     <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">login</a>
+                    <a class="nav-link"  th:href="@{/login}" href="#">login</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}" href="#">logout</a>
+                    <a class="nav-link"  th:href="@{/logout}" href="#">logout</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/cart}" href="#">cart</a>
@@ -82,7 +82,7 @@
                                         <div class="d-flex justify-content-between">
                                             <div>
                                                 <h5 th:text="${item.name}">Blue denim shirt</h5>
-                                                <p class="mb-3 text-uppercase small">Weight: <span th:text="${item.weight}"></span> grams</p>
+                                                <p class="mb-3 text-uppercase small">dimension: <span th:text="${item.dimension}"></span> m²</p>
 <!--                                                <p class="mb-2 text-uppercase small">Category: <span th:text="${item.category.name}"></span></p>-->
 
                                             </div>
@@ -94,7 +94,7 @@
                                                         class="fas fa-trash-alt mr-1"></i> Remove item </a>
 
                                             </div>
-                                            <p class="mb-0"><span><strong>₹<span th:text="${item.price}"></span></strong></span></p>
+                                            <p class="mb-0"><span><strong>$<span th:text="${item.price}"></span></strong></span></p>
                                         </div>
                                     </div>
                                 </div>
@@ -125,20 +125,18 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                                     Amount Payable
-                                    <span>₹<span th:text="${total}"></span></span>
+                                    <span>$<span th:text="${total}"></span></span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                     Shipping
-                                    <span>Gratis</span>
+                                    <span>FREE</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                                     <div>
                                         <strong>The total amount of</strong>
-                                        <strong>
-                                            <p class="mb-0">(including VAT)</p>
-                                        </strong>
+
                                     </div>
-                                    <span><strong>₹<span th:text="${total}"></span></strong></span>
+                                    <span><strong>$<span th:text="${total}"></span></strong></span>
                                 </li>
                             </ul>
 
