--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -102,7 +102,7 @@
                         <!-- Country -->
                         <div class="d-flex flex-wrap">
                             <div class="select-outline position-relative w-100">
-                                <label>Country - <strong>INDIA</strong></label>
+                                <label>Country - <strong>TUNISIA</strong></label>
 
 
                             </div>
@@ -173,20 +173,18 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                                 Amount Payable
-                                <span>₹<span th:text="${total}"></span></span>
+                                <span>$<span th:text="${total}"></span></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 Shipping
-                                <span>Gratis</span>
+                                <span>FREE</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                                 <div>
                                     <strong>The total amount of</strong>
-                                    <strong>
-                                        <p class="mb-0">(including VAT)</p>
-                                    </strong>
+
                                 </div>
-                                <span><strong>₹<span th:text="${total}"></span></strong></span>
+                                <span><strong>$<span th:text="${total}"></span></strong></span>
                             </li>
                         </ul>
 
